<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CabPool</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="eeeeee">#EEEEEE</color>
    <color name="buttonPress">#dddada</color>
    
    <string-array name="gender_array">
        <item>Either</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="message">message</string>
    <string name="request_cab">Request Cab</string>
    <string name="offer_cab">Offer Cab</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="credit_card_num">Credit Card #</string>
    <string name="credit_card_num_col">Credit Card #:</string>
    <string name="expiry_date">Expiry Date (MMYY)</string>
    <string name="expiry_date_col">Expiry Date:</string>
    <string name="birthday">Birthday</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="map">Map</string>
    <string name="logout">Logout</string>
    <string name="offer_in_progress">Offer In Progress</string>
    <string name="cancel_offer">Cancel Offer</string>
    <string name="set_filters">Set Filters</string>
    <string name="gender_col">Gender:</string>
    <string name="create_offer">Create Offer</string>
    <string name="maximum_passengers_">Maximum Passengers:</string>
    <string name="maximum_passengers">Maximum Passengers:</string>
    <string name="minimum_rating">Minimum Rating:</string>
    <string name="email_col">Email:</string>
    <string name="change">Change</string>
    <string name="cab_arrived">Cab Arrived</string>
    <string name="birthday_col">Birthday:</string>
    <string name="offer_destination">Destination</string>
    <string name="search_destination">Destination Search</string>
    <string name="destination_address_search">Address, City</string>
	<string name="search">Search</string>
	<string name="offers_available">Offers Available:</string>
	<string name="destination_text">Destination:</string>
	<string name="destination"></string>
	<string name="fee_text">Your fee is:</string>
	<string name="confirm_payment">Confirm Payment</string>
	<string name="submit_rating">Submit Rating</string>
	<string name="create_request">Create Request</string>
	<string name="cancel_request">Cancel Request</string>
	<string name="create_profile">Create Profile</string>
	<string name="delete_account">Delete Account</string>
	<string name="password_col">Password:</string>
	<string name="arrived">Arrived At Destination</string>
    
</resources>
