<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eeeeee"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/edit_profile"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/edit_profile"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_username"
            style="@style/text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Username:"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/username"
            style="@style/text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_name"
            style="@style/text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Name:"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/name"
            style="@style/text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_birthday"
            style="@style/text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/birthday_col"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/birthday"
            style="@style/text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_password"
            style="@style/text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/password_col"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password"
            style="@style/text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <requestFocus />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_confirm"
            style="@style/text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <EditText
            android:id="@+id/confirm"
            style="@style/text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_email"
            style="@style/text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/email_col"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/email"
            style="@style/text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <requestFocus />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_credit"
            style="@style/text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/credit_card_num_col"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/credit_card_num"
            style="@style/text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/credit_card_num" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_expiry"
            style="@style/text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/expiry_date_col"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/expiry_date"
            style="@style/text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/button_submit"
        style="@style/button_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <Button
        android:id="@+id/deleteButton"
        style="@style/button_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_account" />

</LinearLayout>