<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/filtersTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/set_filters"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/genderText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/gender_col" />

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/gender_array" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/minRatingText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/minimum_rating" />

            <NumberPicker
                android:id="@+id/ratingNumberPicker"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/gender_array" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/maxPassengersText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/maximum_passengers" />

            <NumberPicker
                android:id="@+id/maxPassNumberPicker"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/gender_array" />
        </LinearLayout>

        <EditText
            android:id="@+id/offerDestination"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/offer_destination" />

        <Button
            android:id="@+id/createOffer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_offer" />
    </LinearLayout>

</ScrollView>